# desenvolvimento-web

./: app.py  make_env.py  pyproject.toml  tasks.py
delivery/ext/config/: __init__.py
delivery/ext/debugtoolbar/: __init__.py
delivery/site/: __init__.py  routes.py
templates/site/: base.html  contato.html  index.html  sobre.html
