# Mechanism for storing package requirements: 
# PEP 621 – Define a estrutura basica do [project] no pyproject.toml
# Resolution: 10-Oct-2024

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery"
# major (mudanca grande), minor (versao trabalhada), patch (correcao bug)
version = "0.1.0"
description = "A web platform for managing food delivery orders and restaurant operations."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Wanderson Santana", email = "wanderson.santana@uvv.br"}
]
dependencies = [
    "Flask",
    "dotenv",
]


[tool.delivery]
display_name = "UVVFoods"
company = "UVV Tecnologia"


[project.optional-dependencies]
dev = [
    "ipython",
    "black",
    "flake8",
    "flask-debugtoolbar >= 0.15",
]


test = [
    "pytest >= 8.3",
    "pytest-cov >= 5.0",
    "pytest-flask",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]                         # raiz do projeto
namespaces = true                     # permite namespace packages (recomendado na maioria dos casos modernos)
exclude = ["tests*", "docs*"]         # exemplo de exclusao comum

# Opcional: especifique explicitamente arquivos de dados (se nao usar MANIFEST.in ou setuptools-scm)
[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.png", "*.jpg"]   # para todos os pacotes
"views" = ["templates/*", "static/*"]

#deploy = [
#    "flit==0.1.0",
#]